shutter (0.88)

  * New Features
    -- Refactored the uploading code (added support for plugins)
    -- Added new upload plugins
    -- Public links are now saved when a screenshot was uploaded
    -- New command line option: specify filename
  * New Upload Plugins
    -- Dropbox
    -- ImageBanana
    -- ImageShack
    -- Imgur
    -- ImmIO
    -- ITmages
    -- Minus
    -- Omploader
    -- ToileLibre
    -- TwitPic
    -- UbuntuPics
  * Fixed bugs / minor improvements
    -- LP: #342622
       [Remember upload links]
    -- LP: #841328
       [black corners if window is selected from the window list]
    -- LP: #888441
       [dialog not clickable when renaming a file]
    -- LP: #889031
       [Package should'nt provide own perl libraries]
    -- LP: #892703
       [After unlinking from Dropbox there is no way to relink it again]
    -- LP: #650701
       [retrieve Public URL if screenshot is already uploaded]
    -- LP: #675911
       [Url not selected when i do single click]
    -- LP: #793462
       [Short URL in imageshack.us]
    -- LP: #870556
       [specify file name on command line]
    -- LP: #374024
       [http://omploader.org/ as new image hoster]
    -- LP: #486490
       [Feature Request: Upload to imgur]
    -- LP: #489598
       [Wish: Add Twitpic support]
    -- LP: #598818
       [feature request: extensible imagehost/upload tools]
    -- LP: #602209
       [Add integration with Dropbox]
    -- LP: #619748
       [Add ubuntuusers.de thumbnail code to any of the hosting plugins]
    -- LP: #651029
       [Feature Request: Upload to ITmages]
    -- LP: #703299
       [Add upload to http://pix.toile-libre.org/]
    -- LP: #785032
       [min.us uploading support]
    -- LP: #793463
       [More image services to upload]
  * improved support for Gnome-Shell
  * several smaller bugfixes
  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Mon, 21 Nov 2011 15:54:45 +0100

shutter (0.87.3)

  * New Features 