@@ -1,3 +1,12 @@
+shutter (0.88.1)
+
+  * Fixed bugs / minor improvements
+    -- LP: #894416
+       [Some upload plugins fail with unicode characters in filename]
+  * updated translations
+
+ -- Mario Kemper <mario.kemper@googlemail.com>  Thu, 24 Nov 2011 20:59:52 +0100
+
 shutter (0.88)
 
   * New Features
